--- a/CSE445Final/FuneralWebsite/Web.config
+++ b/CSE445Final/FuneralWebsite/Web.config
@@ -9,8 +9,24 @@
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
-      <forms name = "LoginForm" loginUrl="Login.aspx" timeout="30" >
+      <forms name="LoginForm"   loginUrl="Login.aspx" timeout="30" >
       </forms>
     </authentication>
   </system.web>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ICalendarServices" />
+        <binding name="BasicHttpBinding_EulogyServices" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://webstrar36.fulton.asu.edu/Page3/EulogyService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_EulogyServices"
+        contract="SaveFuneral.EulogyServices" name="BasicHttpBinding_EulogyServices" />
+      <endpoint address="http://webstrar36.fulton.asu.edu/Page1/CalendarServices.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICalendarServices"
+        contract="CalendarService.ICalendarServices" name="BasicHttpBinding_ICalendarServices" />
+    </client>
+  </system.serviceModel>
 </configuration>
