--- a/CSE445Final/FuneralWebsite/Web.config
+++ b/CSE445Final/FuneralWebsite/Web.config
@@ -18,6 +18,7 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_ICalendarServices" />
         <binding name="BasicHttpBinding_EulogyServices" />
+        <binding name="BasicHttpBinding_IService1" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -27,6 +28,9 @@
       <endpoint address="http://webstrar36.fulton.asu.edu/Page1/CalendarServices.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICalendarServices"
         contract="CalendarService.ICalendarServices" name="BasicHttpBinding_ICalendarServices" />
+      <endpoint address="http://webstrar36.fulton.asu.edu/Page6/Service1.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
+        contract="AWeirdPricingService.IService1" name="BasicHttpBinding_IService1" />
     </client>
   </system.serviceModel>
 </configuration>
