--- a/CSE445Final/FuneralWebsite/Web.config
+++ b/CSE445Final/FuneralWebsite/Web.config
@@ -12,6 +12,7 @@
       <forms name="LoginForm"   loginUrl="Login.aspx" timeout="30" >
       </forms>
     </authentication>
+    <sessionState cookieless="AutoDetect" timeout="20"></sessionState>
   </system.web>
   <system.serviceModel>
     <bindings>
