--- a/CSE445Final/FuneralWebsite/Web.config
+++ b/CSE445Final/FuneralWebsite/Web.config
@@ -7,7 +7,11 @@
 
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51"/>
+      </assemblies>
+    </compilation>
     <authentication mode="Forms">
       <forms name="LoginForm"   loginUrl="Login.aspx" timeout="30" >
       </forms>
@@ -20,6 +24,7 @@
         <binding name="BasicHttpBinding_ICalendarServices" />
         <binding name="BasicHttpBinding_EulogyServices" />
         <binding name="BasicHttpBinding_IService1" />
+        <binding name="BasicHttpBinding_IService" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -32,6 +37,9 @@
       <endpoint address="http://webstrar36.fulton.asu.edu/Page6/Service1.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
         contract="AWeirdPricingService.IService1" name="BasicHttpBinding_IService1" />
+      <endpoint address="http://neptune.fulton.ad.asu.edu/WSRepository/Services/ImageVerifierSvc/Service.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService"
+        contract="ImageService.IService" name="BasicHttpBinding_IService" />
     </client>
   </system.serviceModel>
 </configuration>
