--- a/CSE445Final/FuneralWebsite/FuneralWebsite.csproj
+++ b/CSE445Final/FuneralWebsite/FuneralWebsite.csproj
@@ -40,6 +40,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MyEncryptionDLL">
+      <HintPath>..\..\..\..\..\source\repos\MyEncryptionDLL\bin\Debug\netstandard2.0\MyEncryptionDLL.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
@@ -65,6 +68,16 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\AWeirdPricingService\Service11.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ImageService\Service.wsdl" />
+    <None Include="Connected Services\ImageService\Service.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ImageService\Service1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ImageService\Service2.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\SaveFuneral\EulogyService.xsd">
@@ -95,6 +108,15 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <None Include="Connected Services\ImageService\Service.disco" />
+    <None Include="Connected Services\ImageService\configuration91.svcinfo" />
+    <None Include="Connected Services\ImageService\configuration.svcinfo" />
+    <None Include="Connected Services\ImageService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <Content Include="captchaControl.ascx" />
+    <Content Include="imageProcess.aspx" />
     <Content Include="Member\CreateFuneral.aspx" />
     <Content Include="Member\Member.aspx" />
     <Content Include="Member\MemberLogin.aspx" />
@@ -127,7 +149,19 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="captchaControl.ascx.cs">
+      <DependentUpon>captchaControl.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="captchaControl.ascx.designer.cs">
+      <DependentUpon>captchaControl.ascx</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\AWeirdPricingService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\ImageService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -148,6 +182,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="imageProcess.aspx.cs">
+      <DependentUpon>imageProcess.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="imageProcess.aspx.designer.cs">
+      <DependentUpon>imageProcess.aspx</DependentUpon>
     </Compile>
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
@@ -200,6 +241,7 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\AWeirdPricingService\" />
+    <WCFMetadataStorage Include="Connected Services\ImageService\" />
     <WCFMetadataStorage Include="Connected Services\SaveFuneral\" />
     <WCFMetadataStorage Include="Connected Services\CalendarService\" />
   </ItemGroup>
