Completed project, with DLL's and stuff
Works I think

--- a/CSE445Final/FuneralWebsite/FuneralWebsite.csproj
+++ b/CSE445Final/FuneralWebsite/FuneralWebsite.csproj
@@ -39,6 +39,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HashLibrary">
+      <HintPath>..\..\..\..\Dist\HashLibrary\HashLibrary\bin\Debug\HashLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
